fix flickering and add smoother animations

--- a/src/components/carnival_main/CarnivalMain.module.scss
+++ b/src/components/carnival_main/CarnivalMain.module.scss
@@ -42,6 +42,10 @@
   }
 }
 
+.hidden {
+  display: none !important;
+}
+
 .air_balloon {
   animation: float 3s ease-in-out infinite;
 }
@@ -68,9 +72,6 @@
   0% {
     transform: scale(1);
   }
-  50% {
-    transform: scale(2);
-  }
   100% {
     transform: scale(4);
   }
@@ -85,10 +86,18 @@
   }
 }
 
-.fade_out {
-  animation: fade 5s linear;
+@keyframes fadeOut {
+  0% {opacity: 1;}
+  100% {opacity: 0;}
+}
+
+
+.fade_out{
+  animation: fadeOut 0.5s ease-in-out;
   animation-fill-mode: forwards;
 }
+
+
 
 .curtain {
   width: 100%;
@@ -108,9 +117,8 @@
 }
 
 .zoom_start {
-  animation: zoom 5s linear;
+  animation: zoom 3s linear;
   animation-fill-mode: forwards;
-  z-index: 10;
 }
 
 .titleBox {
@@ -121,20 +129,30 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 10%;
+  transition: opacity 3s ease-in-out;
+  opacity: 1;
+}
+
+.imageBackground {
+  font-size: 20px;
+  font-family: "Horse Saguaro";
+  color: #FFF4BF;
+  z-index: 1000;
+
+  background-image: url('/img/navbar/ticket.png');
+  background-size: cover;
+  background-position: center center;
+  width: 200px; /* Adjust as necessary */
+  height: 80px; /* Adjust as necessary */
 }
 
 @media only screen {
   .main {
     width: 100%;
-    height: 75vw;
+    height: 100vh;
     position: relative;
     overflow: hidden; /* Ensure no horizontal scrolling */
-  }
-
-  .sky {
-    position: absolute;
-    top: -4%;
-    width: 100%;
   }
 
   .title {
@@ -144,125 +162,6 @@
     object-fit: contain;
     top: 15%;
     left: 25%;
-  }
 
-  .air_balloon {
-    position: absolute;
-    width: 15%;
-    max-width: 300px;
-    top: 22%;
-    left: 5%;
-    z-index: 3;
-    animation: float 3s ease-in-out infinite;
-  }
-
-  .ferris_wheel {
-    position: absolute;
-    width: 30%;
-    right: 5%;
-    bottom: 22%;
-  }
-
-  .firework {
-    position: absolute;
-    width: 13%;
-    left: 44%;
-    bottom: 36%;
-    animation: growFirework 3s linear infinite;
-  }
-
-  .clouds-container {
-    position: absolute;
-    top: 16%;
-    width: 200%;
-    display: flex;
-    animation: moveClouds 60s linear infinite; /* Adjusted duration from 30s to 60s */
-  }
-
-  .clouds {
-    width: 50%;
-  }
-
-  .clouds.reversed {
-    transform: scaleX(-1);
-  }
-
-  .ticket_booth {
-    position: absolute;
-    bottom: 20%;
-    width: 9%;
-  }
-
-  .main_tent {
-    position: absolute;
-    left: 10%;
-    bottom: 4%;
-    width: 45%;
-    z-index: 3;
-  }
-
-  .popcorn_stand {
-    position: absolute;
-    right: 31.5%;
-    bottom: 15%;
-    width: 12%;
-  }
-
-  .candy_stand {
-    position: absolute;
-    right: 0%;
-    bottom: 9%;
-    width: 15%;
-  }
-
-  .grass_h1, .grass_h2 {
-    position: absolute;
-    width: 2%;
-    z-index: 5;
-  }
-
-  .grass_h1 {
-    left: 20%;
-    bottom: 3.75%;
-  }
-
-  .grass_h2 {
-    left: 42%;
-    bottom: 3.75%;
-  }
-}
-
-@media only screen and (max-width: 1441px) {
-  .sky {
-    top: -5.5vw;
-  }
-
-  .popcorn_stand {
-    right: 31.5%;
-    bottom: 15%;
-  }
-}
-
-@media (max-width: 800px) {
-  .main {
-    .sky {
-      top: 0vw;
-    }
-
-    .title {
-      top: 15%;
-    }
-
-    .air_balloon {
-      top: 23%;
-    }
-
-    .ferris_wheel {
-      bottom: 17%;
-    }
-
-    .candy_stand {
-      width: 12%;
-    }
   }
 }
